using promise (then and catch)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
     </main>
     <script src="./app.js"></script>
-    <script src="./1-xhr.js"></script>
+    <!-- <script src="./1-xhr.js"></script> -->
+    <!-- <script src="./2-xhr-shake.js"></script> -->
   </body>
 </html>
